--- a/biome.json
+++ b/biome.json
@@ -1,8 +1,5 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.0.0-beta.6/schema.json",
   "root": true,
-  "extends": ["@sitaggart/lint-config/biome.json"],
-  "files": {
-    "includes": ["**", "!**/node_modules/**", "!**/.changeset/**", "!**/package.json"]
-  }
+  "extends": ["@sitaggart/lint-config/biome.json"]
 }
