--- a/packages/lint-config/biome.json
+++ b/packages/lint-config/biome.json
@@ -9,6 +9,7 @@
     "enabled": true
   },
   "files": {
+    "includes": ["**", "!**/node_modules/**", "!**/.changeset/**", "!**/package.json"],
     "ignoreUnknown": false
   },
   "formatter": {
