--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,20 +14,26 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
-          fetch-depth: 0
-      - uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
+          node-version: '24'
           registry-url: 'https://registry.npmjs.org'
+      - name: Clear auth token for OIDC
+        run: echo "NODE_AUTH_TOKEN=" >> $GITHUB_ENV
+
+      - name: Upgrade npm for OIDC
+        run: npm install -g npm@latest
       - name: Install dependencies
-        run: bun install
+        run: npm install
+      - name: Configure npm registry
+        run: npm config set registry https://registry.npmjs.org/
       - name: Create Release Pull Request or Publish
         uses: changesets/action@v1
         with:
-          publish: bun run release
-          version: bun run version-packages
+          publish: npm run release
+          version: npm run version-packages
           commit: "chore(release): version packages"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
